frontend_tests/negative/builtin_min_operand/go.mod
module example.com/renvotests/negative/builtin_min_operand

go 1.25
